stop row-reversing on mobile review

--- a/css/custom.css
+++ b/css/custom.css
@@ -84,9 +84,7 @@
 
   }
 
-  .reverse-project-containers {
-    flex-direction: row-reverse;
-  }
+
 
 
  
